# RoommateService

./: .env.dist  .gitignore  README.md  docker-compose.override.yaml  docker-compose.stage.yaml  docker-compose.yaml
app/docker/backend/: nginx.conf
app/stage/: build
django/: .gitignore  Dockerfile  entrypoint.sh  pyproject.toml
django/apps/card/: admin.py  apps.py  exceptions.py  models.py  permissions.py  serializers.py  services.py  tasks.py  urls.py  views.py
django/apps/card/fixtures/: card_tags_fixture.yaml
django/apps/card/migrations/: 0001_initial.py  0002_alter_card_tags.py  0003_remove_cardtag_code.py  0004_alter_card_limit.py  0005_card_user_skips.py
django/apps/chat/: apps.py  exceptions.py  models.py  permissions.py  serializers.py  services.py  urls.py  views.py
django/apps/chat/migrations/: 0001_initial.py
django/apps/city/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
django/apps/city/management/commands/: load_cities.py
django/apps/city/migrations/: 0001_initial.py
django/apps/message/: apps.py  dto.py  enums.py  service.py  tasks.py
django/apps/review/: apps.py  exceptions.py  models.py  serializers.py  services.py  urls.py  views.py
django/apps/review/migrations/: 0001_initial.py  0002_auto_20231203_1238.py
django/apps/user/: admin.py  dto.py  enums.py  exceptions.py  models.py  permissions.py  serializers.py  services.py  urls.py  views.py
django/apps/user/migrations/: 0001_initial.py  0002_alter_user_dob.py  0003_authorizationcode.py  0004_auto_20231106_2236.py  0005_user_datetime_consent_to_processing_of_personal_data.py  0006_alter_user_datetime_consent_to_processing_of_personal_data.py  0007_user_city.py  0008_auto_20231122_1435.py  0009_usersociallink.py  0010_alter_usersociallink_type.py  0011_user_avatar_preview.py  0012_alter_usersociallink_unique_together.py
django/project/: asgi.py  celery.py  urls.py  wsgi.py
django/project/settings/: base.py  dev.py
django/utils/: images.py
